--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -97,6 +97,21 @@ input {
   height: auto !important;
 }
 
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
+}
+
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
 #error_explanation {
   color: red;
   ul {
